# pinentry-qt

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile  NEWS  README  README~  assuan-buffer.c  assuan-defs.h  assuan-handler.c  assuan-listen.c  assuan-pipe-server.c  assuan-util.c  assuan.h  config.h  config.h.in  getopt.c  getopt.h  main.cpp  memory.h  pinentry.c  pinentry.h  pinentrydialog.cpp  pinentrydialog.h  pinentrydialog.moc  secmem-util.c  secmem-util.h  secmem.c
